# OPS

./: README.md
curator/: package.xml  setup.cfg  setup.py
curator/curator/: art.py  bk  curator.py  locations.py
listener/: package.xml  setup.py
listener/listener/: frame_creator.py  listener.py  navigate_to_tag.py  test.py
my_robot_navigation/: package.xml  setup.cfg  setup.py
my_robot_navigation/config/: nav2_params.yaml
my_robot_navigation/launch/: .everything.launch.py.swp  robot_nav.launch.py
my_robot_navigation/my_robot_navigation/: auto_explorer.py  auto_explorer44.py
my_robot_slam/: .setup.py.swp  package.xml  setup.cfg  setup.py
my_robot_slam/launch/: localization.launch.yaml  slam_toolbox.launch.yaml
my_robot_slam/maps/: arena18.pgm  arena18.yaml  arena_map.pgm  arena_map.yaml  map_2.pgm  map_2.yaml  my_map.pgm  my_map.yaml
robot_bringup/: package.xml  setup.cfg  setup.py
robot_bringup/config/: camera_params.yaml  ost.txt  webcam.yaml
robot_bringup/launch/: base.launch.py  lidar.launch.yaml  robot.launch.yaml  turtlebot3_tf.launch.yaml  webcam.launch.yaml
rplidar_ros/src/: rplidar_node.cpp
rqt_joy/: mainpage.dox  package.xml  plugin.xml  setup.py
rqt_joy/resource/: VirtualJoy.ui
rqt_joy/scripts/: rqt_joy
rqt_joy/src/rqt_joy/: joy.py
score_ros/: package.xml  setup.cfg  setup.py
score_ros/launch/: track.launch.yaml
score_ros/score_ros/: april_tag_scorer.py  score_ros.py
tag_detection/: package.xml  setup.cfg  setup.py
tb3_description/: package.xml  setup.cfg
xbox/: package.xml  setup.cfg  setup.py
(+13 files in other folders)
